# sudoku

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  deps.mk  olimpiade-makhluk-2023.sudoku  project.deps
sample/: 1.sudoku  2.sudoku  3.sudoku  4.sudoku  5.sudoku
src/: CMakeLists.txt  constraint.hpp  constraint_increase.cpp  constraint_increase.hpp  constraint_no_consecutive_adjacent.cpp  constraint_no_consecutive_adjacent.hpp  constraint_no_duplicate.cpp  constraint_no_duplicate.hpp  constraint_standard_shifted.cpp  constraint_standard_shifted.hpp  group_generator.cpp  group_generator.hpp  main.cpp  olimpiade-makhluk-2023.cpp  sudoku.cpp  sudoku.hpp
